--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@auth0/angular-jwt": "^5.0.2",
+    "bootstrap": "^4.5.3",
     "faker": "^5.1.0",
+    "font-awesome": "^4.7.0",
+    "jwt-decode": "^3.1.2",
     "rxjs": "~6.6.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^10.12.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
